@@ -17,6 +17,7 @@ codebird-js - changelog
 - #57 Fix XHR in Safari
 + Add new API methods
 + #60 Multiple media per tweet
++ #66 Support Titanium
 
 2.4.3 (2013-07-24)
 - #31 HTTP error on multiple oauth_requestToken calls
